deployments/pathweb/workloads/home-network/grocy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: home-network
  labels:
    app.kubernetes.io/name: grocy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy
        preset-egress-policy: internet-only
    spec:
      restartPolicy: Always
      # runtimeClassName: gvisor
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - image: linuxserver/grocy:latest
        imagePullPolicy: IfNotPresent
        name: grocy
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: config
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: grocy-data
