deployments/pathweb/workloads/home-network/grocy/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grocy
  labels:
    app.kubernetes.io/name: grocy
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - grocy.services.home.yrf.me
  rules:
  - filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: ak-outpost-authentik-embedded-outpost
    backendRefs:
    - name: grocy
      port: 80
