deployments/pathweb/workloads/home-network/grocy/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grocy-network-policy
  namespace: home-network
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grocy
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: traefik
    - matchLabels:
        app.kubernetes.io/name: home-assistant
        io.kubernetes.pod.namespace: home-network
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http: [{}]
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
      matchExpressions:
      - key: "k8s:k8s-app"
        operator: In
        values:
        - kube-dns
        - node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
